# common-ai-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HUMAN_README.md  LICENSE  README.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  feature.yml  hotfix.yml  improve.yml
.github/workflows/: ai-pr-review.yml  auto-pr.yml  close-issues-on-merge.yml  create-release.yml  issue-branch.yml  label-pr.yml  pr-result-feedback.yml  pr-review-test.yml  publish.yml  release-merge.yml  reusable-skill-check.yml
ai_skill_interface/: install.py
common_ai_skill/: install.py
scripts/: submodule-install.sh
skills/ad-monetization/: SKILL.md
skills/agent-orchestration/: SKILL.md
skills/ai-token-efficiency-research/: SKILL.md
skills/ai-token-optimize/: SKILL.md
skills/auto-select/: SKILL.md
skills/code-documentation/: SKILL.md
skills/coverage/: SKILL.md
skills/delivery-workflow/: SKILL.md
skills/docs-sync/: SKILL.md
skills/evaluation/: SKILL.md
skills/finalize/: SKILL.md
skills/framework-selection/: SKILL.md
skills/harness-engineering/: SKILL.md
skills/hexagonal-development/: SKILL.md
skills/human-in-the-loop/: SKILL.md
skills/interface-first-development/: SKILL.md
skills/observability/: SKILL.md
skills/paper-research/: SKILL.md
skills/principle-audit/: SKILL.md
skills/pwa/: SKILL.md
skills/rag-development/: SKILL.md
skills/rag-failure-diagnosis/: SKILL.md
skills/rag-regression-testing/: SKILL.md
skills/security-audit/: SKILL.md
skills/self-recovery/: SKILL.md
skills/skill-install/: SKILL.md
skills/skill-propose/: SKILL.md
skills/skill-update/: SKILL.md
skills/test-runner/: SKILL.md
skills/version/: SKILL.md
skills/viral-share/: SKILL.md
skills/worktree-parent-rebase/: SKILL.md
test/: init.test.js  structure.test.js
