[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "common-ai-skill"
version = "1.1.9"
description = "Abstract skill library for any AI — delivery, testing, architecture, security, and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ai", "claude", "skills", "llm", "prompt", "engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
common-ai-skill = "common_ai_skill.install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["common_ai_skill*"]

[tool.setuptools.package-data]
"*" = ["skills/**/*.md"]
