[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-skill-interface"
version = "1.6.1"
description = "Abstract skill interfaces for AI — delivery, testing, architecture, security, and more. Skills define WHAT; AI decides HOW."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ai", "claude", "skills", "llm", "prompt", "engineering", "interface", "abstract"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ai-skill-interface = "ai_skill_interface.install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_skill_interface*"]

[tool.setuptools.package-data]
ai_skill_interface = ["skills/**/*.md"]
